--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a name="introducci%C3%B3n" class="anchor" href="#introducci%C3%B3n"><span class="octicon octicon-link"></span></a>Introducción</h3>
+        <h3>Screencasts</h3>
 
 <p>
-  <ul>Screencasts:
+  <ul>
     <li><a href="screencasts/cp3demobasica.htm" target="_blank">Demo básica <i>(Basic demo)</i></a></li>
     <li><a href="screencasts/cp3demoerrores.htm" target="_blank">Demo de gestión errores <i>(Error management demo)</i></a></li>
     <li><a href="screencasts/cp3combinado.htm" target="_blank">Demo con varios módulos <i>(Various modules demo)</i></a></li>
