--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <div class="container">
       <section id="main_content">
+      <h3>Intro</h3>
+      <p>Cp3mm es un preprocesador para C++ que permite gestionar módulos de manera sencilla. El preprocesador consume un archivo con extensión cp3, (los otros archivos no se procesan en absoluto), y genera la parte de interfaz (el archivo de cabecera o .h), y su implementación (el archivo de implementación o .cpp). El lenguaje de programación no se ha modificado ni extendido.
+      <br><i>Cp3mm is a preprocessor for C++, allowing to manage modules easily. This preprocessor consumes a file with cp3 extension (other archives are not processed at all), generating the interface part (the header or .h file), and the implementation (the .cpp file). The C++ programming language has not been extended nor modified at all.</i></p>
         <h3>Screencasts</h3>
 
 <p>
@@ -38,6 +41,17 @@
     <li><a href="screencasts/cp3consola.htm" target="_blank">Demo en consola <i>(Console demo)</i></a></li>
   </ul>
 </p>
+<h3>Examples</h3>
+  <ul>
+    <li><a href="examples/math.html">Math.mpp</a></li>
+    <li><a href="examples/person.html">Person.mpp</a></li>
+  </ul>
+<h3>Links</h3>
+<ul>
+  <li><a href="http://www.scintilla.org/SciTE.html">SciTE</a></li>
+  <li><a href="http://www.isocpp.org/">ISO C++</a></li>
+</ul>
+
       </section>
     </div>
 
