--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 </p>
 <h3>Examples</h3>
   <ul>
-    <li><a href="examples/math.html">Math.mpp</a></li>
-    <li><a href="examples/person.html">Person.mpp</a></li>
+    <li><a href="examples/Math.html" target="_blank">Math.mpp</a></li>
+    <li><a href="examples/Person.html" target="_blank">Person.mpp</a></li>
   </ul>
 <h3>Links</h3>
 <ul>
-  <li><a href="http://www.scintilla.org/SciTE.html">SciTE</a></li>
-  <li><a href="http://www.isocpp.org/">ISO C++</a></li>
+  <li><a href="http://www.scintilla.org/SciTE.html" target="_blank">SciTE</a></li>
+  <li><a href="http://www.isocpp.org/" target="_blank">ISO C++</a></li>
 </ul>
 
       </section>
