--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="main_content">
       <h3>Intro</h3>
       <p>Cp3mm es un preprocesador para C++ que permite gestionar módulos de manera sencilla. El preprocesador consume un archivo con extensión cp3, (los otros archivos no se procesan en absoluto), y genera la parte de interfaz (el archivo de cabecera o .h), y su implementación (el archivo de implementación o .cpp). El lenguaje de programación no se ha modificado ni extendido.
-      <br><i>Cp3mm is a preprocessor for C++, allowing to manage modules easily. This preprocessor consumes a file with cp3 extension (other archives are not processed at all), generating the interface part (the header or .h file), and the implementation (the .cpp file). The C++ programming language has not been extended nor modified at all.</i></p>
+      <br><br><i>Cp3mm is a preprocessor for C++, allowing to manage modules easily. This preprocessor consumes a file with cp3 extension (other archives are not processed at all), generating the interface part (the header or .h file), and the implementation (the .cpp file). The C++ programming language has not been extended nor modified at all.</i></p>
         <h3>Screencasts</h3>
 
 <p>
