--- a/index.html
+++ b/index.html
@@ -41,10 +41,29 @@
     <li><a href="screencasts/cp3consola.htm" target="_blank">Demo en consola <i>(Console demo)</i></a></li>
   </ul>
 </p>
-<h3>Examples</h3>
+<h3>Publicaciones (<i>Papers</i>)</h3>
+<ul>
+              <li>Informe t&#233;cnico (<span style="font-style: italic;">technical
+                  report</span>)</li>
+              <ul>
+                <li><a href="docs/TR_cp3.pdf">Documentaci&#243;n
+                    b&#225;sica (<span style="font-style: italic;">basic
+                      documentation</span>)</a></li>
+              </ul>
+              <li>CISTI 2011</li>
+              <ul>
+                <li><a href="docs/cp3_cisti.pdf">Comunicaci&#243;n en CISTI
+                    (paper at CISTI)</a>. </li>
+            </ul>
+            <ul>
+              <li><a href="docs/presentaCp3mm.pdf">Presentaci&#243;n hecha en
+                  CISTI (presentation at CISTI)</a>.</li>
+            </ul>
+          </ul>
+<h3>Ejemplos (<i>Examples</i>)</h3>
   <ul>
     <li><a href="examples/Math.html" target="_blank">Math.mpp</a></li>
-    <li><a href="examples/Person.html" target="_blank">Person.mpp</a></li>
+    <li><a href="examples/Person.html" target="_blank">Person.mpp</a><i>using the Math module</i></li>
   </ul>
 <h3>Links</h3>
 <ul>
